[tool.poetry]
name = "emotion-classification"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.18.0"
scikit-learn = "^1.4.1.post1"
bert-tokenizer = "^0.1.5"
torch = "^2.2.2"
transformers = "^4.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
